Revert "Fix broken layout in STS/GGTS dropdown boxes"
This reverts commit eba9b20000407d1a263d53edbcfbcfea781a0420, for the
same reasons described in commit ff9b516.

--- a/sagan-site/src/main/resources/static/css/base.css
+++ b/sagan-site/src/main/resources/static/css/base.css
@@ -688,7 +688,7 @@ input.floating-input:focus {
 .item--dropdown .item--half-column {
   display: inline-block;
   vertical-align: top;
-  width: 48%;
+  width: 50%;
 }
 .item--dropdown .item--half-column:first-child .item--body-title, .item--dropdown .item--half-column:first-child .item--body--version {
   padding-right: 15px;
