--- a/sagan-site/src/main/resources/static/css/tools.css
+++ b/sagan-site/src/main/resources/static/css/tools.css
@@ -342,7 +342,7 @@
   top: 0;
 }
 .tool-versions--wrapper .tool-versions--container .platform-version--dropdown {
-  width: 82.8%;
+  width: 82.75%;
 }
 
 .eclipse-platform--container {
